# soliloquy

./: CHANGELOG.md  soliloquy.cabal
app/: Main.hs
src/: Soliloquy.hs
src/Soliloquy/: Obj.hs  Parser.hs  Pass.hs  Source.hs  Syntax.hs  Type.hs
src/Soliloquy/Parser/: Error.hs  Phase1.hs  Phase2.hs
src/Soliloquy/Parser/Phase2/: Internal.hs
src/Soliloquy/Syntax/: Ann.hs  Obj.hs  Path.hs  Sym.hs
test-sources/: hello-world.sq
