cabal-version:      2.4
name:               soliloquy
version:            0.1.0.0
synopsis:
-- description:
homepage:           https://github.com/m4xine/soliloquy
bug-reports:        https://github.com/m4xine/soliloquy
license:            MIT
author:             m4xine
maintainer:         maxined@pm.me
category:           Compilers/Interpreters
extra-source-files: CHANGELOG.md

library
    exposed-modules:    
        Soliloquy
    other-modules:
    build-depends:    
        base ^>=4.14.3.0,
        protolude
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
    mixins:   
        base hiding (Prelude), 
        protolude (Protolude as Prelude), 
        protolude

executable soliloquy
    main-is:            Main.hs
    other-modules:
    build-depends:
        base ^>=4.14.3.0,
        soliloquy
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
