cabal-version:      2.4
name:               soliloquy
version:            0.1.0.0
synopsis:
-- description:
homepage:           https://github.com/m4xine/soliloquy
bug-reports:        https://github.com/m4xine/soliloquy
license:            MIT
author:             m4xine
maintainer:         maxined@pm.me
category:           Compilers/Interpreters
extra-source-files: CHANGELOG.md

library
    exposed-modules:    
        Soliloquy,
        Soliloquy.Source,
        Soliloquy.Pass,
        Soliloquy.Type,
        Soliloquy.Syntax,
        Soliloquy.Syntax.Path,
        Soliloquy.Syntax.Obj,
        Soliloquy.Syntax.Ann,
        Soliloquy.Parser,
        Soliloquy.Parser.Error,
        Soliloquy.Parser.Phase1,
        Soliloquy.Parser.Phase2.Internal,
        Soliloquy.Parser.Phase2
    other-modules:
    build-depends:    
        base ^>=4.14.3.0,
        protolude,
        deriving-compat,
        composition,
        megaparsec,
        free,
        transformers,
        mtl,
        parser-combinators,
        pretty,
        text
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings,
        TemplateHaskell,
        GeneralizedNewtypeDeriving,
        DerivingStrategies,
        StandaloneDeriving,
        UndecidableInstances,
        FlexibleInstances,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleContexts,
        TypeFamilies,
        DataKinds,
        GADTs,
        InstanceSigs,
        LambdaCase
    mixins:   
        base hiding (Prelude), 
        protolude (Protolude as Prelude), 
        protolude

executable soliloquy
    main-is:            Main.hs
    other-modules:
    build-depends:
        base ^>=4.14.3.0,
        soliloquy
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions:
